Our Community: almost final page. Ideally all that's left hero image full width on mobile and 'brandon' button fix on medium view

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -10,7 +10,6 @@ $border-radius: 2px;
 $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 $headings-font-family: "brandon-grotesque";
-$font-family-sans-serif: "brandon-grotesque";
 @import "bootstrap/scss/bootstrap";
 
 $fa-font-path: "/assets/fonts";
@@ -20,4 +19,3 @@ $fa-font-path: "/assets/fonts";
 @import "links";
 @import "fonts";
 @import "typography";
-@import "card";
